[project]
name = "mazegen"
version = "1.0.0"
description = "mazegen package - simple 2-D maze generation utilities."
authors = [
    {name = "asadouri",email = "asadouri@student.1337.ma"},
    {name = "abouzkra",email = "abouzkra@student.1337.ma"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
